--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
 
             </a>
 
-            <button class="nav-open-btn" aria-label="open menu" data-nav-togglar>
+            <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
                 <span class="line line-1"></span>
                 <span class="line line-2"></span>
                 <span class="line line-3"></span>
             </button>
 
-            <div class="overlay" data-nav-togglar data-overlay></div>
+            <div class="overlay" data-nav-toggler data-overlay></div>
         </div>
     </header>
 
