--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         </a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#menus" class="navbar-link hover-underline">
+                        <a href="#menu" class="navbar-link hover-underline">
                             <div class="separator"></div>
 
                             <span class="span">Menus</span>
@@ -120,7 +120,7 @@
                         </a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link hover-underline">
+                        <a href="#dish" class="navbar-link hover-underline">
                             <div class="separator"></div>
 
                             <span class="span">Our Chefs</span>
@@ -128,7 +128,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link hover-underline">
+                        <a href="#contact" class="navbar-link hover-underline">
                             <div class="separator"></div>
 
                             <span class="span">Contact</span>
@@ -394,7 +394,7 @@
 
             <!-- SPECIAL DISH -->
 
-            <section class="special-dish text-center" aria-labelledby="dish-label">
+            <section class="special-dish text-center" aria-labelledby="dish-label" id="dish">
 
                 <div class="special-dish-banner">
                     <img src="assets/images/special-dish-banner.jpg" alt="special dish" width="940" height="900"
@@ -662,7 +662,7 @@
 
             <!-- RESERVATION -->
 
-            <section class="reservation">
+            <section class="reservation" id="contact">
                 <div class="container">
 
                     <div class="form reservation-form bg-black-10">
@@ -994,19 +994,19 @@
                         <ul class="footer-list">
 
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">Home</a>
+                                <a href="#home" class="label-2 footer-link hover-underline">Home</a>
                             </li>
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">Menus</a>
+                                <a href="#menu" class="label-2 footer-link hover-underline">Menus</a>
                             </li>
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">About Us</a>
+                                <a href="#about" class="label-2 footer-link hover-underline">About Us</a>
                             </li>
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">Our Chefs</a>
+                                <a href="#dish" class="label-2 footer-link hover-underline">Our Chefs</a>
                             </li>
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">Contact</a>
+                                <a href="#contact" class="label-2 footer-link hover-underline">Contact</a>
                             </li>
 
                         </ul>
@@ -1014,19 +1014,19 @@
                         <ul class="footer-list">
 
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">Facebook</a>
+                                <a href="https://www.facebook.com/" class="label-2 footer-link hover-underline" target="_blank">Facebook</a>
                             </li>
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">Instagram</a>
+                                <a href="https://www.instagram.com/m_faheem66/?hl=en" class="label-2 footer-link hover-underline" target="_blank">Instagram</a>
                             </li>
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">Twitter Us</a>
+                                <a href="https://x.com/" class="label-2 footer-link hover-underline" target="_blank">Twitter Us</a>
                             </li>
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">Youtube</a>
+                                <a href="https://www.youtube.com/" class="label-2 footer-link hover-underline" target="_blank">Youtube</a>
                             </li>
                             <li>
-                                <a href="#" class="label-2 footer-link hover-underline">Google Map</a>
+                                <a href="https://www.google.com/maps" class="label-2 footer-link hover-underline" target="_blank">Google Map</a>
                             </li>
 
                         </ul>
